--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <div class="logo2">
             <img class="logo-img" src="images/image3.png" ALT="moringa" ALIGN=left>
             
+            
             <nav>
                 <ul> 
-                    <li><span>MORINGA</span></li>
+                    <li><button>MORINGA</button></li>
                     <li>Services</li>
                     <li>About</li>
                     <li>Home</li>                 
